# simple-aes256-gcm

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.md  README.md  compute_coverage
examples/: simple.rs
src/: main.rs  simple_aes256_gcm.rs
