[package]
name = "simple-aes256-gcm"
version = "0.1.0"
authors = ["Nicolas Marlier <nicolas@juliedesk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "simple_aes256_gcm"
path = "src/simple_aes256_gcm.rs"

[dependencies]
dotenv = "0.9.0"
base64 = "0.11.0"
aes-gcm = "0.3.0"
aead = "0.2.0"
rand = "0.7.3"
