[package]
name = "simple-aes256-gcm"
version = "0.1.1"
description = "This library is built on top of `aes-gcm` crate exposing a easy-to-use aes256-gcm encryption API."
authors = ["Nicolas Marlier <nicolas@prospect.guru>"]
edition = "2018"
license = "MIT"
homepage="https://github.com/prospect-guru/simple-aes256-gcm"
repository="https://github.com/prospect-guru/simple-aes256-gcm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "simple_aes256_gcm"
path = "src/simple_aes256_gcm.rs"

[dependencies]
base64 = "0.11.0"
aes-gcm = "0.3.0"
aead = "0.2.0"
rand = "0.7.3"

[dev-dependencies]
grcov = "0.5.9"
